    (cmb)
  . Use SSE2 instructions do locale independent strtolower. (Laruence)
  . Fixed bug #79521 (Check __set_state structure). (carusogabriel)
  . Fixed bug #79467 (data:// wrappers are writable). (cmb)
  . Implemented FR #47074 (phpinfo() reports "On" as 1 for the some
    extensions). (cmb)
  . Implemented FR #72089 (require() throws fatal error instead of exception).
    (Nikita)

- BZ2:
  . Fixed bug #71263 (fread() does not report bzip2.decompress errors). (cmb)

- CURL:
  . Bumped required libcurl version to 7.29.0. (cmb)

- Date:
  . Fixed bug #65547 (Default value for sunrise/sunset zenith still wrong).
    (cmb)
  . Fixed bug #69044 (discrepancy between time and microtime). (krakjoe)

- DOM:
  . Add property DOMXPath::$registerNodeNamespaces and constructor argument
    that allow global flag to configure query() or evaluate() calls.

- Enchant:
  . Add LIBENCHANT_VERSION macro
  . Deprecate enchant_broker_set_dict_path, enchant_broker_get_dict_path
    enchant_dict_add_to_personal and enchant_dict_is_in_session
  . Add enchant_dict_add and enchant_dict_is_added functions
  . Use libenchant-2 when available

- FPM:
  . Fixed bug #64865 (Search for .user.ini files from script dir up to
    CONTEXT_DOCUMENT_ROOT). (Will Bender)

- GD:
  . Fixed bug #55005 (imagepolygon num_points requirement). (cmb)
  . Replaced gd resources with objects. (Mark Randall)
  . Made the $num_points parameter of php_imagepolygon optional. (cmb)
  . Removed deprecated image2wbmp(). (cmb)
  . Removed deprecated png2wbmp() and jpeg2wbmp(). (cmb)
  . Added imagegetinterpolation(). (cmb)

- Iconv:
  . Dropped support for iconv without proper errno setting. (cmb)

- Intl:
  . Removed deprecated INTL_IDNA_VARIANT_2003. (cmb)

- JIT:
  . Fixed bug #79582 (Crash seen when opcache.jit=1235 and
    opcache.jit_debug=2). (Laruence)
  . Fixed bug #77857 (Wrong result if executed with JIT). (Laruence)
  . Fixed bug #79255 (PHP cannot be compiled with enable JIT).
    (Laruence, Dmitry)
