@@ -96,18 +96,84 @@ static YYSIZE_T zend_yytnamerr(char*, const char*);
 %token <ast> T_STRING_VARNAME "variable name (T_STRING_VARNAME)"
 %token <ast> T_NUM_STRING "number (T_NUM_STRING)"
 
+%token <ident> T_INCLUDE       "include (T_INCLUDE)"
+%token <ident> T_INCLUDE_ONCE  "include_once (T_INCLUDE_ONCE)"
+%token <ident> T_EVAL          "eval (T_EVAL)"
+%token <ident> T_REQUIRE       "require (T_REQUIRE)"
+%token <ident> T_REQUIRE_ONCE  "require_once (T_REQUIRE_ONCE)"
+%token <ident> T_LOGICAL_OR    "or (T_LOGICAL_OR)"
+%token <ident> T_LOGICAL_XOR   "xor (T_LOGICAL_XOR)"
+%token <ident> T_LOGICAL_AND   "and (T_LOGICAL_AND)"
+%token <ident> T_PRINT         "print (T_PRINT)"
+%token <ident> T_YIELD         "yield (T_YIELD)"
+%token <ident> T_YIELD_FROM    "yield from (T_YIELD_FROM)"
+%token <ident> T_INSTANCEOF    "instanceof (T_INSTANCEOF)"
+%token <ident> T_NEW           "new (T_NEW)"
+%token <ident> T_CLONE         "clone (T_CLONE)"
+%token <ident> T_EXIT          "exit (T_EXIT)"
+%token <ident> T_IF            "if (T_IF)"
+%token <ident> T_ELSEIF        "elseif (T_ELSEIF)"
+%token <ident> T_ELSE          "else (T_ELSE)"
+%token <ident> T_ENDIF         "endif (T_ENDIF)"
+%token <ident> T_ECHO          "echo (T_ECHO)"
+%token <ident> T_DO            "do (T_DO)"
+%token <ident> T_WHILE         "while (T_WHILE)"
+%token <ident> T_ENDWHILE      "endwhile (T_ENDWHILE)"
+%token <ident> T_FOR           "for (T_FOR)"
+%token <ident> T_ENDFOR        "endfor (T_ENDFOR)"
+%token <ident> T_FOREACH       "foreach (T_FOREACH)"
+%token <ident> T_ENDFOREACH    "endforeach (T_ENDFOREACH)"
+%token <ident> T_DECLARE       "declare (T_DECLARE)"
+%token <ident> T_ENDDECLARE    "enddeclare (T_ENDDECLARE)"
+%token <ident> T_AS            "as (T_AS)"
+%token <ident> T_SWITCH        "switch (T_SWITCH)"
+%token <ident> T_ENDSWITCH     "endswitch (T_ENDSWITCH)"
+%token <ident> T_CASE          "case (T_CASE)"
+%token <ident> T_DEFAULT       "default (T_DEFAULT)"
+%token <ident> T_BREAK         "break (T_BREAK)"
+%token <ident> T_CONTINUE      "continue (T_CONTINUE)"
+%token <ident> T_GOTO          "goto (T_GOTO)"
+%token <ident> T_FUNCTION      "function (T_FUNCTION)"
+%token <ident> T_FN            "fn (T_FN)"
+%token <ident> T_CONST         "const (T_CONST)"
+%token <ident> T_RETURN        "return (T_RETURN)"
+%token <ident> T_TRY           "try (T_TRY)"
+%token <ident> T_CATCH         "catch (T_CATCH)"
+%token <ident> T_FINALLY       "finally (T_FINALLY)"
+%token <ident> T_THROW         "throw (T_THROW)"
+%token <ident> T_USE           "use (T_USE)"
+%token <ident> T_INSTEADOF     "insteadof (T_INSTEADOF)"
+%token <ident> T_GLOBAL        "global (T_GLOBAL)"
+%token <ident> T_STATIC        "static (T_STATIC)"
+%token <ident> T_ABSTRACT      "abstract (T_ABSTRACT)"
+%token <ident> T_FINAL         "final (T_FINAL)"
+%token <ident> T_PRIVATE       "private (T_PRIVATE)"
+%token <ident> T_PROTECTED     "protected (T_PROTECTED)"
+%token <ident> T_PUBLIC        "public (T_PUBLIC)"
+%token <ident> T_VAR           "var (T_VAR)"
+%token <ident> T_UNSET         "unset (T_UNSET)"
+%token <ident> T_ISSET         "isset (T_ISSET)"
+%token <ident> T_EMPTY         "empty (T_EMPTY)"
+%token <ident> T_HALT_COMPILER "__halt_compiler (T_HALT_COMPILER)"
+%token <ident> T_CLASS         "class (T_CLASS)"
+%token <ident> T_TRAIT         "trait (T_TRAIT)"
+%token <ident> T_INTERFACE     "interface (T_INTERFACE)"
+%token <ident> T_EXTENDS       "extends (T_EXTENDS)"
+%token <ident> T_IMPLEMENTS    "implements (T_IMPLEMENTS)"
+%token <ident> T_NAMESPACE     "namespace (T_NAMESPACE)"
+%token <ident> T_LIST            "list (T_LIST)"
+%token <ident> T_ARRAY           "array (T_ARRAY)"
+%token <ident> T_CALLABLE        "callable (T_CALLABLE)"
+%token <ident> T_LINE            "__LINE__ (T_LINE)"
+%token <ident> T_FILE            "__FILE__ (T_FILE)"
+%token <ident> T_DIR             "__DIR__ (T_DIR)"
+%token <ident> T_CLASS_C         "__CLASS__ (T_CLASS_C)"
+%token <ident> T_TRAIT_C         "__TRAIT__ (T_TRAIT_C)"
+%token <ident> T_METHOD_C        "__METHOD__ (T_METHOD_C)"
+%token <ident> T_FUNC_C          "__FUNCTION__ (T_FUNC_C)"
+%token <ident> T_NS_C            "__NAMESPACE__ (T_NS_C)"
+
 %token END 0 "end of file"
-%token T_INCLUDE      "include (T_INCLUDE)"
-%token T_INCLUDE_ONCE "include_once (T_INCLUDE_ONCE)"
-%token T_EVAL         "eval (T_EVAL)"
-%token T_REQUIRE      "require (T_REQUIRE)"
-%token T_REQUIRE_ONCE "require_once (T_REQUIRE_ONCE)"
-%token T_LOGICAL_OR   "or (T_LOGICAL_OR)"
-%token T_LOGICAL_XOR  "xor (T_LOGICAL_XOR)"
-%token T_LOGICAL_AND  "and (T_LOGICAL_AND)"
-%token T_PRINT        "print (T_PRINT)"
-%token T_YIELD        "yield (T_YIELD)"
-%token T_YIELD_FROM   "yield from (T_YIELD_FROM)"
 %token T_PLUS_EQUAL   "+= (T_PLUS_EQUAL)"
 %token T_MINUS_EQUAL  "-= (T_MINUS_EQUAL)"
 %token T_MUL_EQUAL    "*= (T_MUL_EQUAL)"
@@ -131,7 +197,6 @@ static YYSIZE_T zend_yytnamerr(char*, const char*);
 %token T_SPACESHIP "<=> (T_SPACESHIP)"
 %token T_SL "<< (T_SL)"
 %token T_SR ">> (T_SR)"
-%token T_INSTANCEOF  "instanceof (T_INSTANCEOF)"
 %token T_INC "++ (T_INC)"
 %token T_DEC "-- (T_DEC)"
 %token T_INT_CAST    "(int) (T_INT_CAST)"
@@ -141,70 +206,8 @@ static YYSIZE_T zend_yytnamerr(char*, const char*);
 %token T_OBJECT_CAST "(object) (T_OBJECT_CAST)"
 %token T_BOOL_CAST   "(bool) (T_BOOL_CAST)"
 %token T_UNSET_CAST  "(unset) (T_UNSET_CAST)"
-%token T_NEW       "new (T_NEW)"
-%token T_CLONE     "clone (T_CLONE)"
-%token T_EXIT      "exit (T_EXIT)"
-%token T_IF        "if (T_IF)"
-%token T_ELSEIF    "elseif (T_ELSEIF)"
-%token T_ELSE      "else (T_ELSE)"
-%token T_ENDIF     "endif (T_ENDIF)"
-%token T_ECHO       "echo (T_ECHO)"
-%token T_DO         "do (T_DO)"
-%token T_WHILE      "while (T_WHILE)"
-%token T_ENDWHILE   "endwhile (T_ENDWHILE)"
-%token T_FOR        "for (T_FOR)"
-%token T_ENDFOR     "endfor (T_ENDFOR)"
-%token T_FOREACH    "foreach (T_FOREACH)"
-%token T_ENDFOREACH "endforeach (T_ENDFOREACH)"
-%token T_DECLARE    "declare (T_DECLARE)"
-%token T_ENDDECLARE "enddeclare (T_ENDDECLARE)"
-%token T_AS         "as (T_AS)"
-%token T_SWITCH     "switch (T_SWITCH)"
-%token T_ENDSWITCH  "endswitch (T_ENDSWITCH)"
-%token T_CASE       "case (T_CASE)"
-%token T_DEFAULT    "default (T_DEFAULT)"
-%token T_BREAK      "break (T_BREAK)"
-%token T_CONTINUE   "continue (T_CONTINUE)"
-%token T_GOTO       "goto (T_GOTO)"
-%token T_FUNCTION   "function (T_FUNCTION)"
-%token T_FN         "fn (T_FN)"
-%token T_CONST      "const (T_CONST)"
-%token T_RETURN     "return (T_RETURN)"
-%token T_TRY        "try (T_TRY)"
-%token T_CATCH      "catch (T_CATCH)"
-%token T_FINALLY    "finally (T_FINALLY)"
-%token T_THROW      "throw (T_THROW)"
-%token T_USE        "use (T_USE)"
-%token T_INSTEADOF  "insteadof (T_INSTEADOF)"
-%token T_GLOBAL     "global (T_GLOBAL)"
-%token T_STATIC     "static (T_STATIC)"
-%token T_ABSTRACT   "abstract (T_ABSTRACT)"
-%token T_FINAL      "final (T_FINAL)"
-%token T_PRIVATE    "private (T_PRIVATE)"
-%token T_PROTECTED  "protected (T_PROTECTED)"
-%token T_PUBLIC     "public (T_PUBLIC)"
-%token T_VAR        "var (T_VAR)"
-%token T_UNSET      "unset (T_UNSET)"
-%token T_ISSET      "isset (T_ISSET)"
-%token T_EMPTY      "empty (T_EMPTY)"
-%token T_HALT_COMPILER "__halt_compiler (T_HALT_COMPILER)"
-%token T_CLASS      "class (T_CLASS)"
-%token T_TRAIT      "trait (T_TRAIT)"
-%token T_INTERFACE  "interface (T_INTERFACE)"
-%token T_EXTENDS    "extends (T_EXTENDS)"
-%token T_IMPLEMENTS "implements (T_IMPLEMENTS)"
 %token T_OBJECT_OPERATOR "-> (T_OBJECT_OPERATOR)"
 %token T_DOUBLE_ARROW    "=> (T_DOUBLE_ARROW)"
-%token T_LIST            "list (T_LIST)"
-%token T_ARRAY           "array (T_ARRAY)"
-%token T_CALLABLE        "callable (T_CALLABLE)"
-%token T_LINE            "__LINE__ (T_LINE)"
-%token T_FILE            "__FILE__ (T_FILE)"
-%token T_DIR             "__DIR__ (T_DIR)"
-%token T_CLASS_C         "__CLASS__ (T_CLASS_C)"
-%token T_TRAIT_C         "__TRAIT__ (T_TRAIT_C)"
-%token T_METHOD_C        "__METHOD__ (T_METHOD_C)"
-%token T_FUNC_C          "__FUNCTION__ (T_FUNC_C)"
 %token T_COMMENT         "comment (T_COMMENT)"
 %token T_DOC_COMMENT     "doc comment (T_DOC_COMMENT)"
 %token T_OPEN_TAG        "open tag (T_OPEN_TAG)"
@@ -216,8 +219,6 @@ static YYSIZE_T zend_yytnamerr(char*, const char*);
 %token T_DOLLAR_OPEN_CURLY_BRACES "${ (T_DOLLAR_OPEN_CURLY_BRACES)"
 %token T_CURLY_OPEN      "{$ (T_CURLY_OPEN)"
 %token T_PAAMAYIM_NEKUDOTAYIM ":: (T_PAAMAYIM_NEKUDOTAYIM)"
-%token T_NAMESPACE       "namespace (T_NAMESPACE)"
-%token T_NS_C            "__NAMESPACE__ (T_NS_C)"
 %token T_NS_SEPARATOR    "\\ (T_NS_SEPARATOR)"
 %token T_ELLIPSIS        "... (T_ELLIPSIS)"
 %token T_COALESCE        "?? (T_COALESCE)"
@@ -268,6 +269,8 @@ static YYSIZE_T zend_yytnamerr(char*, const char*);
 %type <ptr> backup_lex_pos
 %type <str> backup_doc_comment
 
+%type <ident> reserved_non_modifiers semi_reserved
+
 %% /* Rules */
 
 start:
@@ -293,7 +296,7 @@ identifier:
 		T_STRING { $$ = $1; }
 	| 	semi_reserved  {
 			zval zv;
-			zend_lex_tstring(&zv);
+			zend_lex_tstring(&zv, $1);
 			$$ = zend_ast_create_zval(&zv);
 		}
 ;
@@ -847,7 +850,8 @@ trait_alias:
 		trait_method_reference T_AS T_STRING
 			{ $$ = zend_ast_create(ZEND_AST_TRAIT_ALIAS, $1, $3); }
 	|	trait_method_reference T_AS reserved_non_modifiers
-			{ zval zv; zend_lex_tstring(&zv); $$ = zend_ast_create(ZEND_AST_TRAIT_ALIAS, $1, zend_ast_create_zval(&zv)); }
+			{ zval zv; zend_lex_tstring(&zv, $3);
+			  $$ = zend_ast_create(ZEND_AST_TRAIT_ALIAS, $1, zend_ast_create_zval(&zv)); }
 	|	trait_method_reference T_AS member_modifier identifier
 			{ $$ = zend_ast_create_ex(ZEND_AST_TRAIT_ALIAS, $3, $1, $4); }
 	|	trait_method_reference T_AS member_modifier
